    transfers from height list_transfers command in simplewallet can be appended with a block number and only search beyond that
    import/expor for view/spend in CLI
    import/export tracking code , import launches in tracking mode
    gettransactionsbypaymentid fix
    can generate integrated addresses in PKCli & PKService
    import/export 25 word mnemonic phrase(english only atm), only for new wallets
    ryo 51% fix for low hash coins makes making long sidechains much harder
    patched terminate error
    rebased paymentgate to xun
    fixed hang on close error
    more detailed rpc error messages
    triangular distribution of mixins from XMR
    softcoded min mixin of 7 in both pkgui & pkcli, rpc & commandline can use less til next hardfork
    hardcoded max mixin of 11 
    getlastblockheader includes deposit info
    /getinfo has number of gen coins
    status command for daemon
    implemented ban/unban commands and autoban (for clients with wrong version or bad handshake)
    tx info has confirmations field
    faster chain sync
    new auto versioning system
    modified interest generation to work with new wallets
    removed mining commands from pknode & pkcli
    more intuitive naming system for binaries
    updated readme/changes & copyright notices


  